# geocoder-nlp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Database.md  LICENSE  Makefile  README.md  geocoder-nlp.pri  geocoder-nlp.pro
demo/: geocoder-nlp.cpp  main.cpp  nearby-line.cpp  nearby-point.cpp
importer/: Makefile  README.md  import_pbf.sh  install_deps.sh
importer/sql/: duplicates.sql  nominatim_cyclic_parents.sql
importer/src/: config.h  hierarchy.cpp  hierarchy.h  hierarchyitem.cpp  hierarchyitem.h  main.cpp  normalization.cpp  normalization.h  utils.cpp  utils.h
importer/stylesheet/: map.ost  whitelist
scripts/import/: build.sh  pack.sh  prepare_countries.py  prepare_distribution.py  uploader.sh
scripts/postal/: README.md  build_all_country_db.py  build_country_db.sh  countries_languages.txt  make_country_list.py  split_addresses.py
scripts/tags/: README.md  generate_mapstyle.py
src/: geocoder.cpp  geocoder.h  main.cpp  postal.cpp  postal.h  version.h
